fixed alignment compare dialog

--- a/src/app/common/dialogs/custom-dialogs/compare-product/compare-column/compare-column.component.scss
+++ b/src/app/common/dialogs/custom-dialogs/compare-product/compare-column/compare-column.component.scss
@@ -64,6 +64,7 @@
 
 	.status-selector {
 		padding-top: var(--spacing-ms);
+		align-items: center;
 		// padding-bottom: var(--spacing-ms);
 		border-bottom: none;
 	}
